hphp/test/slow/parser/hh-reserved-name-num-1.php.expectf
Fatal error: Cannot use 'Num' as class name as it is reserved in %s on line 3
